--- a/terms/index.html
+++ b/terms/index.html
@@ -100,8 +100,7 @@
                         accessing the Services (the “<strong>Effective Date</strong>”), you (1) accept and agree to
                         these Terms and any additional terms, rules and conditions of participation issued by Westar
                         from time to time and (2) consent to the collection, use, disclosure and other handling of
-                        information as described in our <a href="https://westar.io/privacy-policy/">Privacy
-                            Policy.</a> If you do not agree to the Terms, then you may not access or use the Services.
+                        information.</a> If you do not agree to the Terms, then you may not access or use the Services.
                     </p>
                     <p>You represent to us that you are lawfully able to enter into contracts. If you are entering into
                         this Agreement for an entity, such as the company you work for, you represent to us that you
@@ -561,10 +560,6 @@
                         supplemental policies or addendums applicable to any Service as provided to you, and any other
                         policy or terms referenced in or incorporated into this Agreement, each as may be updated by us
                         from time to time.</p>
-                    <p>“<strong>Privacy Policy</strong>” means the privacy policy located at <a
-                            href="https://westar.io/privacy-policy">https://westar.io/privacy-policy</a> (and
-                        any successor or related locations designated by us), as it may be updated by us from time to
-                        time.</p>
                     <p>“<strong>Service</strong>” means each of the services, including Starcoin, StarMask
                         and any other features, tools, materials, or services offered from time to time, including our
                         network infrastructure, by us or our affiliates. </p>
