Add Starcoin to homepage

--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
     </div>
     <div class="section-right-container">
         <div class="section-one-right float-left">
-            <h3>Sirius Protocol</h3>
+            <h3>Starcoin Blockchain</h3>
             <div class="section-one-desc">
-                去中心化、安全、多方、及时的二层支付协议
+                新一代的分层智能合约和分布式金融网络
             </div>
-            <a href="projects/sirius/">
+            <a href="https://starcoin.org">
                 <button>
                     LEARN MORE
                 </button>
@@ -260,13 +260,37 @@
 
 
 
-<div class="main-section section-four section-bg-resize">
+
+<div class="main-section section-two section-bg-resize">
     <div class="section-bg-container">
-        <div class="section-four-bg">
+        <div class="section-two-bg">
         </div>
     </div>
     <div class="section-right-container">
         <div class="section-one-right float-left">
+            <h3>Sirius Protocol</h3>
+            <div class="section-one-desc">
+                去中心化、安全、多方、及时的二层支付协议
+            </div>
+            <a href="projects/sirius/">
+                <button>
+                    LEARN MORE
+                </button>
+            </a>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div class="main-section section-three section-bg-resize">
+    <div class="section-bg-container section-bg-container-right">
+        <div class="section-three-bg section-five-bg">
+        </div>
+    </div>
+    <div class="section-right-container">
+        <div class="section-left section-left-thr section-three-left float-left">
             <h3>Stargate Protocol</h3>
             <div class="section-one-desc">
                 Starcoin 的二层协议实现，实现了通用的状态通道，提供扩展性以及便捷性
