--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="https://gmpg.org/xfn/11">
 
-<title>Westar Labs &#8211; A Pioneering Team With Deep in Move Ecosystem.</title>
+<title>Westar Labs</title>
+<meta name="description" content="A Pioneering Team With Deep in Move Ecosystem.">
 <meta name="robots" content="max-image-preview:large">
 <link rel="alternate" href="/zh/home-2/" hreflang="zh">
 <link rel="alternate" href="/" hreflang="en">
